# DHCameraCpture

./: CMakeLists.txt  CTimeCounter.h  Camara.cpp  Camera.h  DxImageProc.h  GxIAPI.h  ReadMe.md  main.cpp
Debug/: CaptureCatch
Release/: CaptureCatch
cp/: SHELL
driver/: DAHENG_USBcameras_Linux_CN_20131028.rar
